# kde1-kpackage

./: CHANGES  CMakeLists.txt  Makefile.am  README  README.md  aboutDialog.cpp  aboutDialog.h  alpminterface.cpp  alpminterface.h  cache.cpp  cache.h  config.h  debInterface.cpp  debInterface.h  fbsdInterface.cpp  fbsdInterface.h  findf.cpp  findf.h  installationWidget.cpp  installationWidget.h  kio.cpp  kio.h  kissInterface.cpp  kissInterface.h  kpackage.cpp  kpackage.h  kpackage.kdelnk  kpackage_dpkg_ins  kpackage_dpkg_rm  kpackage_slack_l  ktvitem.cpp  ktvitem.h  main.cpp  managementWidget.cpp  managementWidget.h  options.cpp  options.h  packageDisplay.cpp  packageDisplay.h  packageInfo.cpp  (+29 more)
icon/: Makefile.am  kpackage.xpm
mimetypes/: Makefile.am  x-debian-package.kdelnk  x-rpm.kdelnk
mini-icon/: Makefile.am  debfile.xpm  kpackage.xpm  rpmfile.xpm
pics/: Makefile.am  cross.xpm  dbad.xpm  dnew.xpm  dupdated.xpm  kiss.xpm  knew.xpm  ptick.xpm  question.xpm  rnew.xpm  rupdated.xpm  slack.xpm  snew.xpm  supdated.xpm
toolbar/: Makefile.am
